force-app/main/default/objects/RD_PTCCrossRef__c/fields/RefPTC1__c.field-meta.xml
<CustomField>
    <fullName>RefPTC1__c</fullName>
    <label>RefPTC1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>