force-app/main/default/objects/RD_PTCCrossRef__c/fields/RefPTC3__c.field-meta.xml
<CustomField>
    <fullName>RefPTC3__c</fullName>
    <label>RefPTC3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>