force-app/main/default/objects/RD_PTCCrossRef__c/fields/RefPTC5__c.field-meta.xml
<CustomField>
    <fullName>RefPTC5__c</fullName>
    <label>RefPTC5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>